--- a/MyFirstProject/public/index.html
+++ b/MyFirstProject/public/index.html
@@ -12,14 +12,14 @@
   <h1>Hello World!</h1>
 
   <p>
-    Lorem ipsum dolor <i>s</i>it amet, consectetur adipiscing elit, sed do
+    Lorem ipsum dolor <i>sit</i> <b>amet</b>, consectetur adipiscing elit, sed do
     eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
     enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi
     ut aliquip ex ea commodo consequat.
   </p>
 
   <p>
-    Duis <b>a</b>ute irure dolor in reprehenderit in voluptate velit esse cillum
+    Duis <b>aute</b> irure dolor in reprehenderit in voluptate velit esse cillum
     dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat
     non proident, sunt in culpa qui officia deserunt mollit anim id est
     laborum.
