--- a/MyFirstProject/public/index.html
+++ b/MyFirstProject/public/index.html
@@ -8,15 +8,28 @@
   <title>Simple Page</title>
 </head>
 
+<!-- lecture-3 content: 
+  line break
+  italic
+  bold
+  horizontal rule
+  special entities / symbols
+  ordered list & alternative symbol types
+  unordered list & alternative symbol types
+  link
+ -->
+
 <body>
   <h1>Hello World!</h1>
 
   <p>
     Lorem ipsum dolor <i>sit</i> <b>amet</b>, consectetur adipiscing elit, sed do
-    eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+    eiusmod tempor incididunt ut labore et dolore magna aliqua. <br> Ut
     enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi
     ut aliquip ex ea commodo consequat.
   </p>
+
+  <hr width="75%">
 
   <p>
     Duis <b>aute</b> irure dolor in reprehenderit in voluptate velit esse cillum
@@ -24,6 +37,52 @@
     non proident, sunt in culpa qui officia deserunt mollit anim id est
     laborum.
   </p>
+
+  <p>&amp &copy</p>
+  <!-- special character -->
+
+  <ul type="square">
+    <!-- "disc", "square", "circle", etc -->
+    <li>list item 1</li>
+    <li>list item 2</li>
+    <li>list item 3</li>
+  </ul>
+
+  <ol type="a">
+    <!-- types: "1", "A", "a", "I", "i" -->
+    <li>list item 1</li>
+    <li>list item 2</li>
+    <li>list item 3</li>
+  </ol>
+
+  <a href=""></a>
+  <!-- 
+    <a href="http://www.randomsite.com/">Visit
+    Random Site.com</a>
+    
+    Target attribute defines where the link opens
+     target="_blank" Opens link in new window
+     target="_self" Opens link in same window
+    by default it opens in the same window
+  -->
+
+  <!-- start of exercise 3 -->
+  <ol>
+    <li>
+      <h2>Where are the timetable for the course?</h2>
+    </li>
+    <p>The course timetable can be found at the following <a target="_blank"
+        href="https://www.universityofgalway.ie/science-engineering/school-of-computer-science/currentstudents/timetables/">link</a>.
+    </p>
+    <li>
+      <h2>What are the contact details for academic faculty?</h2>
+    </li>
+    <p>The programme director's info can be found at this <a target="_blank"
+        href="https://www.universityofgalway.ie/science-engineering/school-of-computer-science/people/">location</a>.
+    </p>
+  </ol>
+  <!-- end of exercise 3 -->
+
 
 </body>
 
