--- a/MyFirstProject/public/practice2/index.html
+++ b/MyFirstProject/public/practice2/index.html
@@ -12,12 +12,53 @@
 <body>
 
     <div>
-        <p>My test paragraph. </p>
+        <!-- practice one -->
         <a target="_blank" class="links" style="color:green" href="https://www.google.com/">google1</a>
         <a target="_blank" class="links" href="https://www.google.com/">google2</a>
         <a target="_blank" class="links" href="https://www.google.com/">google3</a>
     </div>
 
+    <div class="container">
+        <!-- practice two -->
+        <p>
+            Hello World!
+        </p>
+        <p>
+            Hello World!
+        </p>
+    </div>
+
+    <!-- span goes horizontally, div goes vertically -->
+    <span>icon 1</span>
+    <span style="visibility: hidden">icon 2</span>
+    <span>icon 3</span>
+
+    <!-- practice 3 page styling -->
+    <div class="container">
+        <p class="paragraph">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has
+            been the
+            industry's
+            standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to
+            make
+            a type specimen book. It has survived not only five centuries, but also the leap into electronic
+            typesetting,
+            remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets
+            containing
+            Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including
+            versions
+            of Lorem Ipsum.</p>
+
+        <p class="paragraph">It is a long established fact that a reader will be distracted by the readable content of a
+            page when looking
+            at
+            its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as
+            opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing
+            packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem
+            ipsum'
+            will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes
+            by
+            accident, sometimes on purpose (injected humour and the like).</p>
+    </div>
 </body> <!-- end of body -->
 
 </html> <!-- end of html -->
