added on page jumping

--- a/assignment-two/public/index.html
+++ b/assignment-two/public/index.html
@@ -29,7 +29,7 @@
   <!-- end of nav bar -->
 
   <!-- start of home div -->
-  <div class="flex-container section-container">
+  <div id="home" class="flex-container section-container">
     <div class="left-container bg-pink">
       <div style="padding: 20% 5% 0 5%">
         <h1 class="white-title">A muisc company. </h1>
@@ -47,7 +47,7 @@
   <!-- end of home div -->
 
   <!-- start of pricing div -->
-  <div class="flex-container section-container">
+  <div id="pricing" class="flex-container section-container">
     <div class="left-container">
       <div class="free-container">
         <p>FREE</p>
@@ -74,7 +74,7 @@
   <!-- end of pricing div -->
 
   <!-- start of about us div -->
-  <div class="section-container">
+  <div id="about-us" class="section-container">
     <h1>ABOUT US</h1>
     <p>Spotify is a digital music, podcast, and video service that gives you access to millions of songs and other
       content from creators all over the world. Basic functions such as playing music are totally free, but you can also
