completed pricing and about us section

--- a/assignment-two/public/index.html
+++ b/assignment-two/public/index.html
@@ -8,6 +8,7 @@
   <!-- <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Crimson+Pro&family=Literata"> -->
   <link rel="stylesheet" href="stylesheets/style.css">
   <title>assignment-two-danjie-hu-22238805</title>
+  <script src="https://kit.fontawesome.com/dc511dc9b2.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -49,35 +50,43 @@
   <!-- start of pricing div -->
   <div id="pricing" class="flex-container section-container">
     <div class="left-container">
-      <div class="free-container">
+      <div class="pricing-container">
         <p>FREE</p>
         <ul>
-          <li>Free music from thousands of artists around the world</li>
-          <li>6 Premium accounts for family members living under one roof</li>
-          <li>Block explicit music</li>
-          <li>Ad-free music listening, play offline, on-demand playback</li>
-          <li>Spotify Kids: a separate app made just for kids</li>
+          <li><i class="fa-solid fa-check"></i>Free music from thousands of artists around the world</li>
+          <li><i class="fa-solid fa-xmark"></i>6 Premium accounts for family members living under one roof</li>
+          <li><i class="fa-solid fa-xmark"></i>Block explicit music</li>
+          <li><i class="fa-solid fa-xmark"></i>Ad-free music listening, play offline, on-demand playback</li>
+          <li><i class="fa-solid fa-xmark"></i>Spotify Kids: a separate app made just for kids</li>
         </ul>
+        <p class="btn">GET STARTED</p>
       </div>
     </div>
-    <div class="right-container priced-option">
-      <p> €9 per month</p>
-      <ul>
-        <li>Free music from thousands of artists around the world</li>
-        <li>6 Premium accounts for family members living under one roof</li>
-        <li>Block explicit music</li>
-        <li>Ad-free music listening, play offline, on-demand playback</li>
-        <li>Spotify Kids: a separate app made just for kids</li>
-      </ul>
+    <div class="right-container">
+      <div class="pricing-container">
+        <p> €9 per month</p>
+        <ul>
+          <li><i class="fa-solid fa-check"></i>Free music from thousands of artists around the world</li>
+          <li><i class="fa-solid fa-check"></i>6 Premium accounts for family members living under one roof</li>
+          <li><i class="fa-solid fa-check"></i>Block explicit music</li>
+          <li><i class="fa-solid fa-check"></i>Ad-free music listening, play offline, on-demand playback</li>
+          <li><i class="fa-solid fa-check"></i>Spotify Kids: a separate app made just for kids</li>
+        </ul>
+        <p class="btn">GET STARTED</p>
+      </div>
     </div>
   </div>
   <!-- end of pricing div -->
 
   <!-- start of about us div -->
   <div id="about-us" class="section-container">
-    <h1>ABOUT US</h1>
-    <p>Spotify is a digital music, podcast, and video service that gives you access to millions of songs and other
-      content from creators all over the world. Basic functions such as playing music are totally free, but you can also
+    <div class="bg-image"></div>
+    <h1 class="white-title">About us.</h1>
+    <p class="white-text">
+      Spotify is a digital music, podcast, and video service that gives you access to millions of
+      songs and other
+      content from creators all over the world. Basic functions such as playing music are totally free, but you can
+      also
       choose to upgrade to Spotify Premium.</p>
   </div>
   <!-- end of about us div -->
