in class practice with boostrap responsive screen size

--- a/assignment-two/public/index.html
+++ b/assignment-two/public/index.html
@@ -35,7 +35,7 @@
       <div style="padding: 20% 5% 0 5%">
         <h1 class="white-title">A muisc company. </h1>
         <p class="white-text">We are just like a spotify but not really because this is my homework.
-          <i> I feel aesthetically a square image is better for this design so I leave it at that...</i>
+          <i>Circled image did not look good with this design... I commented it out </i> 😬
         </p>
       </div>
     </div>
