--- a/MyFirstProject/public/index.html
+++ b/MyFirstProject/public/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Simple Page</title>
+  <title>JS exercise</title>
 </head>
 
 <!-- lecture-3 content: basic HTML
@@ -100,7 +100,7 @@
 
 
 
-
+  <script src="javascripts/hello.js"></script>
 </body>
 
 </html>
