created layout and completed responsiveness with bootstrap, completed demo comments

--- a/assignment-four/public/index.html
+++ b/assignment-four/public/index.html
@@ -12,37 +12,48 @@
 </head>
 
 <body>
-
-  <div class="card-container">
-
-    <div class="card sizing">
-      <div class="card-body">
-        <h5 class="card-title">Card title</h5>
-        <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
-        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-          content.</p>
+  <!-- start of mock comments -->
+  <div class="sizing container">
+    <div class="row g-2">
+      <!-- start of a card element -->
+      <div class="col-md-6 col-lg-4">
+        <div class="p-2">
+          <div class="card">
+            <div class="card-body">
+              <h6 class="card-subtitle mb-2 text-muted">Silva</h6>
+              <p class="card-text">Woahhhh now that’s amazing congrats man 💯🔥🎶🙏 You are an amazing singer so much
+                passion so much love and such a beautiful voice!!</p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- start of a card element -->
+      <div class="col-md-6 col-lg-4">
+        <div class="p-2">
+          <div class="card">
+            <div class="card-body">
+              <h6 class="card-subtitle mb-2 text-muted">Nielson</h6>
+              <p class="card-text">Can't believe it 🤦‍♀️ missed you at Mrs T's last year, the one weekend we didn't go
+                and missed you this morning on our local beach where we walk our dogs 🤦‍♀️😂 congrats 👍🎉</p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-6 col-lg-4">
+        <div class="p-2">
+          <div class="card">
+            <div class="card-body">
+              <h6 class="card-subtitle mb-2 text-muted">Rosalind Fox</h6>
+              <p class="card-text">Great artist Ed, don’t ever stop!!</p>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
-
-    <div class="card sizing">
-      <div class=" card-body">
-        <h5 class="card-title">Card title</h5>
-        <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
-        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-          content.</p>
-      </div>
-    </div>
-
-    <div class="card sizing">
-      <div class="card-body">
-        <h5 class="card-title">Card title</h5>
-        <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
-        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-          content.</p>
-      </div>
-    </div>
-
+    <div style="margin: 0 0 150px 0"></div>
+    <!-- this is just an empty space -->
   </div>
+  <!-- start of mock comments -->
 
   <!-- start of an input card -->
   <div class="sizing bottom-sticky border-box">
