--- a/assignment-four/public/index.html
+++ b/assignment-four/public/index.html
@@ -16,7 +16,7 @@
   <div class="sizing container">
     <div class="row g-2">
       <!-- start of a card element -->
-      <div class="col-md-6 col-lg-4">
+      <div class="col-md-6 col-lg-4" name="demo">
         <div class="p-2">
           <div class="card">
             <div class="card-body">
@@ -28,7 +28,7 @@
         </div>
       </div>
       <!-- start of a card element -->
-      <div class="col-md-6 col-lg-4">
+      <div class="col-md-6 col-lg-4" name="demo">
         <div class="p-2">
           <div class="card">
             <div class="card-body">
@@ -39,12 +39,23 @@
           </div>
         </div>
       </div>
-      <div class="col-md-6 col-lg-4">
+      <div class="col-md-6 col-lg-4" name="demo">
         <div class="p-2">
           <div class="card">
             <div class="card-body">
-              <h6 class="card-subtitle mb-2 text-muted">Rosalind Fox</h6>
-              <p class="card-text">Great artist Ed, don’t ever stop!!</p>
+              <h6 class="card-subtitle mb-2 text-muted">Fox</h6>
+              <p class="card-text">Fantastic, what's not to love about you, you are a very talented song writer and
+                performer you give so much, so well deserved. </p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-6 col-lg-4" name="demo">
+        <div class="p-2">
+          <div class="card">
+            <div class="card-body">
+              <h6 class="card-subtitle mb-2 text-muted">Rosalind</h6>
+              <p class="card-text">Great artist Ed, don’t ever stop!! 🎉💕 </p>
             </div>
           </div>
         </div>
@@ -70,6 +81,7 @@
   </div>
   <!-- end of an input card -->
 
+  <script src="javascripts/script.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
     crossorigin="anonymous"></script>
