--- a/practice-project/public/index.html
+++ b/practice-project/public/index.html
@@ -9,7 +9,13 @@
 </head>
 
 <body>
-  <h1>This website is for demostrating GET, POST and DELETE request with firestore </h1>
+  <h3>This website is for demostrating GET, POST and DELETE request with firestore </h3>
+
+  <div>
+    <input id="handle" type="text">
+    <input id="comment" type="text">
+    <button onclick="postComment()">POST</button>
+  </div>
 
 </body>
 
