changed client side js file names

--- a/practice-project/public/index.html
+++ b/practice-project/public/index.html
@@ -17,6 +17,9 @@
     <button onclick="postComment()">POST</button>
   </div>
 
+  <script src="javascripts/getComment.js"></script>
+  <script src="javascripts/postComment.js"></script>
+  <script>displayComments();</script>
 </body>
 
 </html>
