--- a/assignment-five/public/index.html
+++ b/assignment-five/public/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>assignment-four-danjie-hu-22238805</title>
+  <title>assignment-five-danjie-hu-22238805</title>
   <link rel="stylesheet" href="stylesheets/style.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
@@ -78,7 +78,12 @@
       <label for="exampleFormControlTextarea1" class="form-label">comment</label>
       <textarea class="form-control" id="comment" rows="3"></textarea>
     </div>
-    <button type="button" class="btn btn-primary" onClick="post()">POST</button>
+    <div class="icon-container">
+      <img class="icon" src="images/camera.png" alt="camera">
+      <img class="icon" src="images/video.png" alt="video">
+      <img class="icon" src="images/graph.png" alt="graph">
+      <button type="button" class="btn btn-primary" onClick="post()">POST</button>
+    </div>
   </div>
   <!-- end of an input card -->
 
