improved form count

--- a/assignment-five/public/index.html
+++ b/assignment-five/public/index.html
@@ -84,7 +84,7 @@
       <img class="icon" src="images/camera.png" alt="camera">
       <img class="icon" src="images/video.png" alt="video">
       <img class="icon" src="images/graph.png" alt="graph">
-      <button id="postbtn" type="button" class="btn btn-primary" onClick="post()">POST</button>
+      <button id="postbtn" type="button" class="btn btn-primary" onClick="post()" onblur="post()">POST</button>
     </div>
   </div>
   <!-- end of an input card -->
