--- a/assignment-five/public/index.html
+++ b/assignment-five/public/index.html
@@ -85,15 +85,19 @@
       <img class="icon" src="images/camera.png" alt="camera">
       <img class="icon" src="images/video.png" alt="video">
       <img class="icon" src="images/graph.png" alt="graph">
-      <button id="postbtn" type="button" class="btn btn-primary" onClick="post()">POST</button>
+      <button id="postbtn" type="button" class="btn btn-primary" onClick="postComment()">POST</button>
     </div>
   </div>
   <!-- end of an input card -->
 
-  <script src="javascripts/script.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
     crossorigin="anonymous"></script>
+  <script src="javascripts/script.js"></script>
+  <script src="javascripts/comment.js"></script>
+  <script>
+    getComments();
+  </script>
 </body>
 
 </html>
