js exam prep completed

--- a/exam-prep/client-js/index.html
+++ b/exam-prep/client-js/index.html
@@ -11,6 +11,18 @@
 <body>
     <h1>client javascript testing</h1>
 
+    <input id="username" type="text" placeholder="username">
+    <input id="phone" type="text" placeholder="phone number">
+    <button onclick="validate()">submit</button>
+
+    <form id="numbers">
+        <input type="text" value="1">
+        <input type="text" value="2">
+        <input type="text" value="3">
+    </form>
+    <button onclick="double()">double</button>
+
+
     <script src="script.js"></script>
 </body>
 
