--- a/exam-prep/client-js/index.html
+++ b/exam-prep/client-js/index.html
@@ -15,6 +15,7 @@
     <input id="phone" type="text" placeholder="phone number">
     <button onclick="validate()">submit</button>
 
+    <!-- test -->
     <form id="numbers">
         <input type="text" value="1">
         <input type="text" value="2">
