--- a/exam-prep/dropdown.html
+++ b/exam-prep/dropdown.html
@@ -1,4 +1,46 @@
-<label for="gender">Gender: </label>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+
+<body>
+    <span>Gender </span>
+    <select>
+        <option>Male</option>
+        <option>Female</option>
+    </select>
+    <br>
+
+    <span>username</span>
+    <input type="text" placeholder="username">
+    <br>
+
+    <span>password</span>
+    <input type="text" placeholder="password">
+    <br>
+
+    <input type="checkbox">
+    <span>remember me</span>
+    <br>
+
+    <button>submit</button>
+    <button>reset</button>
+</body>
+
+</html>
+
+<style>
+    body {
+        color: red;
+    }
+</style>
+
+<!-- <label for="gender">Gender: </label>
 <select name="gender" id="gender">
     <option value="male">Male</option>
     <option value="female">Female</option>
@@ -6,11 +48,11 @@
 <br>
 
 <label for="username">Username: </label>
-<input id="username" type="text">
+<input id="username" type="text" placeholder="username">
 <br>
 
 <label for="password">Password: </label>
-<input id="password" type="text">
+<input id="password" type="text" placeholder="password">
 <br>
 
 <input id="remember-me" type="checkbox">
@@ -18,4 +60,4 @@
 <br>
 
 <button>submit</button>
-<button>reset</button>
+<button>reset</button> -->
